# consentinel

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: agreements.py  audit.py  datasets.py  requests.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/domain/: enums.py  models.py
backend/app/pii/: classifier.py
backend/app/services/: audit.py
backend/migrations/: env.py
backend/migrations/versions/: fb3920a81f37_initial_schema.py
backend/tests/: conftest.py  roles.py  test_agreements_api.py  test_audit.py  test_datasets_api.py  test_pii_classifier.py  test_rbac.py  test_requests_workflow.py
docs/: BACKLOG.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/datasets/new/: page.tsx
frontend/src/app/requests/: page.tsx
frontend/src/components/: badges.tsx  header.tsx  ui.tsx
frontend/src/lib/: api.ts  cn.ts  pii.ts  role-context.tsx  types.ts  use-async.ts
frontend/tests/: api.test.ts  pii.test.ts
infra/: README.md  main.tf  outputs.tf  variables.tf
