[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "consentinel"
version = "0.1.0"
description = "Data-governance & compliance portal: dataset manifests, automatic PII classification, and right-to-be-forgotten workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.6",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: calling Depends()/Query() in argument defaults is FastAPI's intended
# idiom, not a bug — so we exclude it from the bugbear checks.
ignore = ["B008"]
